--- a/env_configs/prod.properties
+++ b/env_configs/prod.properties
@@ -28,6 +28,8 @@ export TG_ENVIRONMENT_IDENTIFIER="tf-${TG_REGION}-${TG_BUSINESS_UNIT}-${TG_PROJE
 
 export TG_SHORT_ENVIRONMENT_IDENTIFIER="tf-${TG_BUSINESS_UNIT}-${TG_PROJECT}-${TG_ENVIRONMENT}"
 
+export TG_ENVIRONMENT_NAME="${TG_PROJECT}-${TG_ENVIRONMENT}"
+
 # REMOTE_STATE_BUCKET
 export TG_REMOTE_STATE_BUCKET="${TG_ENVIRONMENT_IDENTIFIER}-remote-state"
 
@@ -51,6 +53,8 @@ export TF_VAR_is_production=${IS_PRODUCTION}
 export TF_VAR_environment_identifier=${TG_ENVIRONMENT_IDENTIFIER}
 
 export TF_VAR_short_environment_identifier=${TG_SHORT_ENVIRONMENT_IDENTIFIER}
+
+export TF_VAR_environment_name=${TG_ENVIRONMENT_NAME}
 
 export TF_VAR_remote_state_bucket_name=${TG_REMOTE_STATE_BUCKET}
 
