--- a/env_configs/prod.properties
+++ b/env_configs/prod.properties
@@ -60,6 +60,8 @@ export TF_VAR_remote_state_bucket_name=${TG_REMOTE_STATE_BUCKET}
 
 export TF_VAR_ami_id="ami-03223887b49cf5581"
 
+export source_code_url="https://$(git config --get remote.origin.url | cut -d '.' -f 1,2 | cut -d '@' -f 2 | sed 's/:/\//')"
+
 # Standard tags
 export TF_VAR_tags="{ \
 owner = \"${OWNER}\", \
@@ -69,5 +71,6 @@ project = \"${TG_PROJECT}\", \
 is-production = \"${IS_PRODUCTION}\", \
 business-unit = \"${TG_BUSINESS_UNIT}\", \
 infrastructure-support = \"${INFRASTRUCTURE_SUPPORT}\", \
-region = \"${TG_REGION}\" \
+region = \"${TG_REGION}\", \
+source-code = \"${source_code_url}\", \
 }"
